# stiftungskamp2024

./: Intro_to_Python.html  Intro_to_Python.ipynb  Intro_to_Python.pdf:Zone.Identifier  README.md  pyproject.toml  solution.py
Bilder/: bild1.jpeg:Zone.Identifier  bild2.png:Zone.Identifier
