[tool.poetry]
name = "stiftungskamp-2024"
version = "0.1.0"
description = ""
authors = ["Helena Bakic <bakic.helena@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
